Fixed user modal on mobile in trips

--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -258,6 +258,7 @@
         color: $clr1;
         font-size: rem(21px);
         display: block;
+        font-family: Airbnb_Cereal-Bold;
 
         @include for-large-list-max {
           display: none;
